# machina

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  README.zh.md
.github/workflows/: check.yml  riscv-tests.yml
accel/src/: code_buffer.rs  lib.rs  regalloc.rs  timer.rs  translate.rs
accel/src/exec/: exec_loop.rs  mod.rs  tb_store.rs
accel/src/ir/: tb.rs
accel/src/x86_64/: codegen.rs  constraints.rs  emitter.rs
core/src/: cpu.rs  lib.rs  monitor.rs  wfi.rs
docs/en/: coding-guidelines.md  git-guidelines.md  rust-guidelines.md
docs/plans/: gdbstub-draft.md  gdbstub-plan.md
docs/zh/: coding-guidelines.md  git-guidelines.md  rust-guidelines.md
exec/src/: lib.rs
gdbstub/src/: handler.rs  server.rs
guest/riscv/: Cargo.toml
guest/riscv/tests/: csr_tests.rs  mmu_tests.rs
hw/core/: Cargo.toml
memory/src/: address_space.rs  flat_view.rs  lib.rs  region.rs
monitor/: Cargo.toml
monitor/src/: hmp.rs  lib.rs  mmp.rs  service.rs
roms/: Makefile
scripts/: gen_pptx.py  gen_pptx_shapes.py
src/: main.rs
system/: Cargo.toml
system/src/: cpus.rs  gdb.rs  lib.rs
tests/: Cargo.toml
tests/src/: gdbstub.rs  hw_loader.rs  hw_ref_machine.rs  hw_uart.rs  lib.rs  monitor.rs  softmmu.rs  softmmu_exec.rs  trace.rs  virtio.rs  virtio_net.rs
tests/src/backend/: x86_64.rs  x86_64_ext.rs
tests/src/decode/: mod.rs
tests/src/exec/: mod.rs  mttcg.rs
tests/src/frontend/: difftest.rs  mod.rs  riscv_zbb.rs  riscv_zbs.rs
tests/src/integration/: advanced_tests.rs  basic_tests.rs  generated_and_complex_tests.rs  mod.rs
tools/irdump/: Cargo.toml
(+42 files in other folders)
