[package]
name = "machina-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
machina-accel = { path = "../accel" }
machina-guest-riscv = { path = "../guest/riscv" }
machina-decode = { path = "../decode" }
machina-system = { path = "../system" }
machina-memory = { path = "../memory" }
machina-core = { path = "../core" }
libc = "0.2"
